// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add and remove displayed nodes adds displayed node to empty state 1`] = `
Object {
  "allNodes": Array [
    "foo1",
  ],
  "foo": Array [
    "foo1",
  ],
  "notDisplayed": Array [],
}
`;

exports[`add and remove displayed nodes adds displayed node to existing state 1`] = `
Object {
  "allNodes": Array [
    "foo1",
    "foo2",
  ],
  "foo": Array [
    "foo1",
    "foo2",
  ],
  "notDisplayed": Array [],
}
`;

exports[`add and remove displayed nodes adds not displayed node 1`] = `
Object {
  "allNodes": Array [
    "foo1",
    "foo2",
    "foo3",
  ],
  "foo": Array [
    "foo1",
    "foo2",
    "foo3",
  ],
  "notDisplayed": Array [
    "foo3",
  ],
}
`;

exports[`add and remove displayed nodes removes all nodes associated with category 1`] = `
Object {
  "allNodes": Array [],
  "notDisplayed": Array [],
}
`;

exports[`add and remove displayed nodes removes chosen displayed nodes 1`] = `
Object {
  "allNodes": Array [
    "foo2",
  ],
  "foo": Array [
    "foo2",
  ],
  "notDisplayed": Array [],
}
`;
